# visca-joystick

./: .gitignore  README.md  config.json  controller.py  main.py  ptz_control.py  ptz_control.spec  pyproject.toml  visca_thread.py
mapping/: x3d_win.json  xbox_linux.json  xbox_win.json
old/: main.py  startup_shutdown.py
