[project]
name = "visca-joystick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "pygame>=2.6.1",
    "pyinstaller>=6.11.1",
    "visca-over-ip",
]

[tool.uv.sources]
visca-over-ip = { path = "VISCA-IP-Controller" }
